[0.5.0] SW-92 팀 시간표를 조회할 수 있다. (#29)
* [SW-92] feat(schedule): 팀 스케줄 조회 서비스 코드 1차 구현 완료

* [SW-92] refactor(gradle): 버전 수정

* [SW-92] refactor(schedule): 서비스 내 Collector 분리

* [SW-92] refactor(schedule): 팀 스케줄 조회 2차 구현(출력 형식 수정)

* [SW-92] refactor(schedule): 팀 스케줄 조회 3차 구현(출력을 API와 동일한 형식으로 수정)

* [SW-92] refactor(schedule): UserRepository에서 query문 삭제

* [SW-92] fix(user_team): 팀에 중복 팀원 등록 안되도록 수정

* [SW-92] refactor(aspect): 컨트롤러에서 엔티티 조회

---------

Co-authored-by: Son Daehyeon <sondaehyeon01@gmail.com>