@@ -3,10 +3,10 @@ package com.github.kmu_shell_we.domain.user._schedule.service;
 import com.fasterxml.jackson.databind.node.JsonNodeType;
 import com.fasterxml.jackson.dataformat.xml.XmlMapper;
 import com.github.kmu_shell_we.domain.user._schedule.dto.response.ScheduleResponse;
-import com.github.kmu_shell_we.domain.user._schedule.dto.response.TimeRange;
 import com.github.kmu_shell_we.domain.user._schedule.entity.Schedule;
 import com.github.kmu_shell_we.domain.user._schedule.repository.ScheduleRepository;
 import com.github.kmu_shell_we.domain.user.entity.User;
+import com.github.kmu_shell_we.global.config.CustomConfig;
 import kong.unirest.core.ContentType;
 import kong.unirest.core.Unirest;
 import lombok.RequiredArgsConstructor;
@@ -15,31 +15,24 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.io.IOException;
-import java.time.DayOfWeek;
 import java.util.List;
-import java.util.Map;
 import java.util.Objects;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @Service
 @RequiredArgsConstructor
 public class ScheduleService {
 
+    private final static XmlMapper xmlMapper = new XmlMapper();
     private final ScheduleRepository scheduleRepository;
-
-    private static final String USER_AGENT = "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/138.0.0.0 Safari/537.36";
+    private final CustomConfig.UserAgentHolder userAgentHolder;
 
     @Transactional(readOnly = true)
     public ScheduleResponse getMySchedule(User user) {
 
-        Map<DayOfWeek, List<TimeRange>> collect = scheduleRepository.findAllByUser(user).stream()
-                .collect(Collectors.groupingBy(
-                        Schedule::getDayOfWeek,
-                        Collectors.mapping(TimeRange::from, Collectors.toList())
-                ));
+        List<Schedule> schedules = scheduleRepository.findAllByUser(user);
 
-        return ScheduleResponse.of(collect);
+        return ScheduleResponse.from(schedules);
     }
 
     @Transactional
@@ -50,12 +43,12 @@ public class ScheduleService {
 
         byte[] response = Unirest.post("https://api.everytime.kr/find/timetable/table/friend")
                 .contentType(ContentType.APPLICATION_FORM_URLENCODED.getMimeType())
-                .header("User-Agent", USER_AGENT)
+                .header("User-Agent", userAgentHolder.getUserAgent())
                 .field("identifier", identifier)
                 .asBytes()
                 .getBody();
 
-        Map<DayOfWeek, List<TimeRange>> collect = new XmlMapper().readTree(response)
+        List<Schedule> schedules = xmlMapper.readTree(response)
                 .get("table")
                 .get("subject")
                 .valueStream()
@@ -65,11 +58,8 @@ public class ScheduleService {
                 .flatMap(node -> node.getNodeType().equals(JsonNodeType.ARRAY) ? node.valueStream() : Stream.of(node))
                 .map(node -> Schedule.fromEverytime(node, user))
                 .peek(scheduleRepository::save)
-                .collect(Collectors.groupingBy(
-                        Schedule::getDayOfWeek,
-                        Collectors.mapping(TimeRange::from, Collectors.toList())
-                ));
+                .toList();
 
-        return ScheduleResponse.of(collect);
+        return ScheduleResponse.from(schedules);
     }
 }
